editor/tree-sitter-kofun/test/corpus/core.txt
==================
Functions and expressions
==================

fn classify(read value: Int) -> Text {
  let mut total = value + 2 * 3
  if total >= 9 {
    return "large"
  } else {
    return "small"
  }
}

fn main() {
  let values = 1 .. 8
  let answer = values
  |> map(fn(x: Int) => x * x)
  |> sum()
  print(answer)
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (identifier))))
    (type
      (identifier))
    (block
      (declaration_in_block
        (let_statement
          (identifier)
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (identifier)))))
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (integer))))
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (integer)))))))))))))))
      (declaration_in_block
        (expression_statement
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (if_expression
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (identifier)))))))
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer)))))))))))))
                                    (block
                                      (declaration_in_block
                                        (return_statement
                                          (pipeline_expression
                                            (coalesce_expression
                                              (logical_or_expression
                                                (logical_and_expression
                                                  (equality_expression
                                                    (comparison_expression
                                                      (range_expression
                                                        (additive_expression
                                                          (multiplicative_expression
                                                            (power_expression
                                                              (unary_expression
                                                                (postfix_expression
                                                                  (string))))))))))))))))
                                    (block
                                      (declaration_in_block
                                        (return_statement
                                          (pipeline_expression
                                            (coalesce_expression
                                              (logical_or_expression
                                                (logical_and_expression
                                                  (equality_expression
                                                    (comparison_expression
                                                      (range_expression
                                                        (additive_expression
                                                          (multiplicative_expression
                                                            (power_expression
                                                              (unary_expression
                                                                (postfix_expression
                                                                  (string)))))))))))))))))))))))))))))))))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (declaration_in_block
        (let_statement
          (identifier)
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (integer))))))
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (integer)))))))))))))))
      (declaration_in_block
        (let_statement
          (identifier)
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (identifier))))))))))))
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (identifier)
                                  (call_expression
                                    (arguments
                                      (pipeline_expression
                                        (coalesce_expression
                                          (logical_or_expression
                                            (logical_and_expression
                                              (equality_expression
                                                (comparison_expression
                                                  (range_expression
                                                    (additive_expression
                                                      (multiplicative_expression
                                                        (power_expression
                                                          (unary_expression
                                                            (postfix_expression
                                                              (lambda_expression
                                                                (parameters
                                                                  (parameter
                                                                    (identifier)
                                                                    (type
                                                                      (identifier))))
                                                                (pipeline_expression
                                                                  (coalesce_expression
                                                                    (logical_or_expression
                                                                      (logical_and_expression
                                                                        (equality_expression
                                                                          (comparison_expression
                                                                            (range_expression
                                                                              (additive_expression
                                                                                (multiplicative_expression
                                                                                  (power_expression
                                                                                    (unary_expression
                                                                                      (postfix_expression
                                                                                        (identifier)))))))))))))))))
                                                        (power_expression
                                                          (unary_expression
                                                            (postfix_expression
                                                              (identifier))))))))))))))))))))))))))
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (identifier)
                                  (call_expression
                                    (arguments))))))))))))))))
      (declaration_in_block
        (expression_statement
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (identifier)
                                  (call_expression
                                    (arguments
                                      (pipeline_expression
                                        (coalesce_expression
                                          (logical_or_expression
                                            (logical_and_expression
                                              (equality_expression
                                                (comparison_expression
                                                  (range_expression
                                                    (additive_expression
                                                      (multiplicative_expression
                                                        (power_expression
                                                          (unary_expression
                                                            (postfix_expression
                                                              (identifier))))))))))))))))))))))))))))))))

==================
Collections, optionals, and ownership
==================

fn consume(take resource: Resource) {
  let own mut own alias: Resource? = resource
  take alias
}

fn main() {
  let pair = (1, 2)
  let singleton = (1,)
  let grouped = (1 + 2)
  let values = [1, 2, 3,]
  return values[0] ?? null
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (identifier))))
    (block
      (declaration_in_block
        (let_statement
          (identifier)
          (type
            (identifier))
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (identifier)))))))))))))))
      (declaration_in_block
        (take_statement
          (identifier)))))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (declaration_in_block
        (let_statement
          (identifier)
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (tuple_expression
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer)))))))))))))
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer))))))))))))))))))))))))))))
      (declaration_in_block
        (let_statement
          (identifier)
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (tuple_expression
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer))))))))))))))))))))))))))))
      (declaration_in_block
        (let_statement
          (identifier)
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (parenthesized_expression
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer)))))
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer))))))))))))))))))))))))))))
      (declaration_in_block
        (let_statement
          (identifier)
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (list_expression
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer)))))))))))))
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer)))))))))))))
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer))))))))))))))))))))))))))))
      (declaration_in_block
        (return_statement
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (identifier)
                                  (index_expression
                                    (pipeline_expression
                                      (coalesce_expression
                                        (logical_or_expression
                                          (logical_and_expression
                                            (equality_expression
                                              (comparison_expression
                                                (range_expression
                                                  (additive_expression
                                                    (multiplicative_expression
                                                      (power_expression
                                                        (unary_expression
                                                          (postfix_expression
                                                            (integer))))))))))))))))))))))))
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (null))))))))))))))))))
