editor/tree-sitter-kofun/test/corpus/extensions.txt
==================
Imports and C ABI
==================

import framework.http
pub from collections import Map, Set

repr(C) struct Pair {
  left: CInt,
  right: CInt,
}

extern "C" fn add(left: CInt, right: CInt) -> CInt

---

(source_file
  (import_declaration
    (module_path
      (identifier)
      (identifier)))
  (from_import_declaration
    (module_path
      (identifier))
    (import_list
      (identifier)
      (identifier)))
  (repr_struct_declaration
    (identifier)
    (struct_body
      (struct_field
        (identifier)
        (type
          (identifier)))
      (struct_field
        (identifier)
        (type
          (identifier)))))
  (extern_function_declaration
    (string)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (identifier)))
      (parameter
        (identifier)
        (type
          (identifier))))
    (type
      (identifier))))
